syntax = "proto3";

package sm2.api.card;

option go_package = "card/pkg/api/card;card";

message Card {
  string id = 1;
  string front_content = 2;
  string back_content = 3;
}

message CreateRequest {
  string front_content = 1;
  string back_content = 2;
}

message CreateResponse {
  Card card = 1;
}
